# piano

./: CLOG.md  Cargo.toml  NO_STD.md  PROJECT.md  README.md
.cargo/: config.toml
desktop/: Cargo.toml  presets.xml
desktop/src/: audio.rs  gui.rs  keyboard.rs  main.rs  presets.rs
engine/: Cargo.toml
engine/src/: app.rs  event.rs  lib.rs
midi/: Cargo.toml
midi/src/: lib.rs  usb.rs
music/: Cargo.toml
music/src/: event.rs  lib.rs  note.rs  pitch.rs
stm32/: Cargo.toml  build.rs  memory.x
stm32/.cargo/: config.toml
stm32/src/: audio.rs  board.rs  codec.rs  control.rs  display.rs  gpio.rs  hardware_engine.rs  lib.rs  main.rs  mbed_engine.rs  midi.rs
synth/: Cargo.toml
synth/src/: effects.rs  envelope.rs  filter.rs  instrument.rs  lfo.rs  lib.rs  oscillator.rs  synthesizer.rs  voice.rs  voice_manager.rs
