[package]
name = "openrsynth"
version = "0.1.0"
edition = "2024"

[dependencies]
music = { path = "../music" }
synth = { path = "../synth" }
engine = { path = "../engine" }
midi = { path = "../midi", features = ["desktop-input"] }
cpal = "^0.18.1"
eframe = "0.35.0"
quick-xml = { version = "0.41.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
